# openwhu.github.io

./: .gitmodules  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: main.yml
CourseR/: index.html
CourseR/信息管理学院/: index.html
CourseR/健康学院/: index.html
CourseR/公共选修课/: index.html
CourseR/动力与机械学院/: index.html
CourseR/化学与分子科学学院/: index.html
CourseR/医学研究院/: index.html
CourseR/医学职业技术学院/: index.html
CourseR/医学部机关/: index.html
CourseR/印刷与包装系/: index.html
CourseR/历史学院/: index.html
CourseR/口腔医学院/: index.html
CourseR/哲学学院/: index.html
CourseR/国学院/: index.html
CourseR/土木建筑工程学院/: index.html
CourseR/城市设计学院/: index.html
CourseR/基础医学院/: index.html
CourseR/外国语言文学学院/: index.html
CourseR/工业科学研究院/: index.html
CourseR/弘毅学堂/: index.html
CourseR/微电子学院/: index.html
CourseR/政治与公共管理学院/: index.html
CourseR/教育科学研究院/: index.html
CourseR/数学与统计学院/: index.html
CourseR/文学院/: index.html
CourseR/新闻与传播学院/: index.html
CourseR/水利水电学院/: index.html
CourseR/法学院/: index.html
CourseR/测绘学院/: index.html
CourseR/物理科学与技术学院/: index.html
CourseR/生命科学学院/: index.html
CourseR/电子信息学院/: index.html
CourseR/电气与自动化学院/: index.html
CourseR/社会学院/: index.html
CourseR/第一临床学院/: index.html
CourseR/第二临床学院/: index.html
about/: index.html
contact/: index.html
docs/: about.md  contact.md  download.md  index.md  relate.md  upload.md
download/: index.html
overrides/: main.html
relate/: index.html
search/: search_index.json
stylesheets/: purple.css
upload/: index.html
(+19 files in other folders)
