[project]
name = "openwhu-github-io"
version = "0.1.0"
description = ""
authors = [
    {name = "Crescentm",email = "guyues@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs-awesome-pages-plugin (>=2.10.1,<3.0.0)",
    "pymdown-extensions (>=10.14.1,<11.0.0)",
    "mkdocs-material-extensions (>=1.3.1,<2.0.0)",
    "mkdocs-material (>=9.5.50,<10.0.0)"
]

[tool.poetry]
packages = [{include = "openwhu"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
